# teacher_helper

./: .dockerignore  .dockerinit.sh  .gitignore  Dockerfile  docker-compose.dev.yml  main.py  pyproject.toml  requirements.txt  teachio  teachio.sh
.github/workflows/: github-actions.yml
app/: app.py  cli.py  main.py  settings.py  states.py
app/bot/: _exceptions.py  bot.py  messages.py  methods.py  states.py
app/bot/absences/: callbacks.py  handlers.py
app/bot/db/: _db.py
app/bot/locales/: __init__.py  ru.py
app/bot/markly/: callbacks.py  handlers.py  messages.py  models.py  states.py
app/bot/modules/absences/: callbacks.py  handlers.py
app/bot/modules/statistics/: callbacks.py  handlers.py
app/bot/modules/students/: callbacks.py  handlers.py  models.py
app/bot/students/: callbacks.py  handlers.py  models.py
app/bot/utils/: callbacks.py  decorators.py  types.py
app/db/: __init__.py  _exceptions.py  base.py  engine.py
app/utils/: autoreload.py  debugging.py  logging.py  net.py
db/: models.py
dev/: docker-compose.dev.yml
dev/scripts/: teachio.dev.sh
prod/: docker-compose.prod.yml
prod/scripts/: teachio
